--- a/adsal_L2_forwarding/pom.xml
+++ b/adsal_L2_forwarding/pom.xml
@@ -22,25 +22,9 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Import-Package>
-              org.opendaylight.controller.sal.core,
-              org.opendaylight.controller.sal.utils,
-              org.opendaylight.controller.sal.packet,
-              org.opendaylight.controller.sal.match,
-              org.opendaylight.controller.sal.action,
-              org.opendaylight.controller.sal.flowprogrammer,
-              org.opendaylight.controller.sal.topology,
-              org.opendaylight.controller.switchmanager,
-              org.opendaylight.controller.topologymanager,
-              org.opendaylight.controller.statisticsmanager,
-              org.apache.felix.dm,
-              org.osgi.service.component,
-              org.slf4j,
-              org.eclipse.osgi.framework.console,
-              org.osgi.framework
-            </Import-Package>
             <Export-Package>
-              org.opendaylight.tutorial.tutorial_L2_forwarding
+              org.opendaylight.tutorial.tutorial_L2_forwarding,
+              edu.uci.ics.jung.visualization*
             </Export-Package>
             <Bundle-Activator>
               org.opendaylight.tutorial.tutorial_L2_forwarding.internal.Activator
@@ -53,24 +37,24 @@
     </plugins>
   </build>
   <dependencies>
-      <!-- south bound plugins -->
-      <dependency>
-          <groupId>org.sdnhub.odl</groupId>
-          <artifactId>ofbroker</artifactId>
-          <version>${sdnhub.of_plugins.version}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.sdnhub.odl</groupId>
-          <artifactId>protocol_plugins.openflow13</artifactId>
-          <version>${sdnhub.of_plugins.version}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.sdnhub.odl</groupId>
-          <artifactId>protocol_plugins.openflow10</artifactId>
-          <version>${sdnhub.of_plugins.version}</version>
-      </dependency>
+    <!-- south bound plugins -->
+    <dependency>
+      <groupId>org.sdnhub.odl</groupId>
+      <artifactId>ofbroker</artifactId>
+      <version>${sdnhub.of_plugins.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.sdnhub.odl</groupId>
+      <artifactId>protocol_plugins.openflow13</artifactId>
+      <version>${sdnhub.of_plugins.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.sdnhub.odl</groupId>
+      <artifactId>protocol_plugins.openflow10</artifactId>
+      <version>${sdnhub.of_plugins.version}</version>
+    </dependency>
 
-      <!-- other modules -->
+    <!-- other modules -->
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>switchmanager</artifactId>
@@ -92,5 +76,27 @@
       <version>${sal.version}</version>
     </dependency>
 
+    <!-- third party -->
+    <dependency>
+      <groupId>net.sf.jung</groupId>
+      <artifactId>jung2</artifactId>
+      <version>2.0.1</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.jung</groupId>
+      <artifactId>jung-graph-impl</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.jung</groupId>
+      <artifactId>jung-visualization</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.jung</groupId>
+      <artifactId>jung-algorithms</artifactId>
+      <version>2.0.1</version>
+    </dependency>
   </dependencies>
 </project>
