Basic building topology graph with hosts. TODO - get already detected hosts - adding and removing switches (now are just from reported edges)

--- a/adsal_L2_forwarding/pom.xml
+++ b/adsal_L2_forwarding/pom.xml
@@ -75,6 +75,11 @@
       <artifactId>sal</artifactId>
       <version>${sal.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>hosttracker</artifactId>
+      <version>${hosttracker.implementation.version}</version>
+    </dependency>
 
     <!-- third party -->
     <dependency>
