Changed frequency of statistics update to 1s.

--- a/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
+++ b/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
@@ -92,9 +92,9 @@ org.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH=true
 # The size of the queue holding pending statistics requests (default 64). For large networks of n switches, it is recommended to set the queue size to n
 # of.statsQueueSize = 64
 # The flow statistics polling interval in second (default 10 sec)
-# of.flowStatsPollInterval=10
+ of.flowStatsPollInterval=1
 # The port statistics polling interval in second (default 5 sec)
-# of.portStatsPollInterval=5
+ of.portStatsPollInterval=1
 # The description statistics polling interval in second (default 60 sec)
 # of.descStatsPollInterval=60
 # The table statistics polling interval in second (default 10 sec)
