--- a/distribution/opendaylight-osgi-adsal/pom.xml
+++ b/distribution/opendaylight-osgi-adsal/pom.xml
@@ -244,6 +244,12 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <artifactId>sal.networkconfiguration.implementation</artifactId>
       <version>${sal.networkconfiguration.version}</version>
     </dependency>
+    <!-- simpleforwarding for comparison --> 
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>samples.simpleforwarding</artifactId>
+      <version>0.4.2-Helium</version>
+    </dependency>
 
     <!-- ODL Northbound -->
     <dependency>
