--- a/northbound/pom.xml
+++ b/northbound/pom.xml
@@ -37,6 +37,32 @@
       <artifactId>adsal_L2_forwarding</artifactId>
       <version>0.5.0-SNAPSHOT</version>
     </dependency>
+        <!-- other modules -->
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>switchmanager</artifactId>
+      <version>${switchmanager.api.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>topologymanager</artifactId>
+      <version>${topologymanager.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>statisticsmanager</artifactId>
+      <version>${statisticsmanager.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>sal</artifactId>
+      <version>${sal.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>hosttracker</artifactId>
+      <version>${hosttracker.implementation.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -48,7 +74,9 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Import-Package>
+             <Import-Package>
+              org.opendaylight.tutorial.tutorial_L2_forwarding.internal,
+              org.opendaylight.controller.hosttracker.hostAware,
               org.apache.commons.logging,
               com.sun.jersey.spi.container.servlet,
               org.opendaylight.controller.northbound.commons,
@@ -57,6 +85,7 @@
               org.opendaylight.controller.sal.utils,
               org.opendaylight.controller.sal.authorization,
               org.opendaylight.controller.sal.packet.address,
+              org.opendaylight.controller.sal.core,
               javax.ws.rs,
               javax.ws.rs.core,
               javax.xml.bind.annotation,
