K property (tee.k) for k-path from config.ini

--- a/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
+++ b/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
@@ -151,3 +151,6 @@ hosttracker.keyscheme=IP
 lisp.mappingOverwrite = true
 # Enable the Solicit-Map-Request (SMR) mechanism
 lisp.smr = false
+
+# TEE configuration
+tee.k = 4
