Higher flow granularity by extended Match. Configurable via config.ini

--- a/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
+++ b/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
@@ -153,4 +153,8 @@ lisp.mappingOverwrite = true
 lisp.smr = false
 
 # TEE configuration
+# Number of k-shortest path to find
 tee.k = 4
+# Fields in match in addition to DL_SRC and DL_DST.
+# Possible comma separated values: "TP_SRC", "TP_DST", "NW_PROTO"
+tee.matchFields = NW_PROTO, TP_DST
