Auto removing unused flows. Listening for flow removed and removing logical flow.

--- a/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
+++ b/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
@@ -158,3 +158,7 @@ tee.k = 4
 # Fields in match in addition to DL_SRC and DL_DST.
 # Possible comma separated values: "TP_SRC", "TP_DST", "NW_PROTO"
 tee.matchFields = NW_PROTO, TP_DST
+# Idle timeout for old flow lefta fter logical flow transition. Safe flow removal.
+tee.movingTimeout = 5
+# Idle timeout for ordinary flow programmed between two hosts
+tee.flowTimeout = 30
