NetworkMonitor moved updata interval to config.ini

--- a/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
+++ b/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
@@ -162,3 +162,6 @@ tee.matchFields = NW_PROTO, TP_DST
 tee.movingTimeout = 5
 # Idle timeout for ordinary flow programmed between two hosts
 tee.flowTimeout = 30
+# The network monitor update interval in seconds (default 5 sec)
+tee.nm.updateInterval = 1
+ 
