--- a/distribution/opendaylight-osgi-adsal/pom.xml
+++ b/distribution/opendaylight-osgi-adsal/pom.xml
@@ -17,8 +17,8 @@ http://maven.apache.org/maven-v4_0_0.xsd">
     <!-- SDNHub tutorial -->
     <dependency>
       <groupId>org.sdnhub.odl.tutorial</groupId>
-      <artifactId>adsal_L2_forwarding</artifactId>
-      <version>${adsal_L2_forwarding.version}</version>
+      <artifactId>tee</artifactId>
+      <version>${tee.version}</version>
     </dependency>
     <dependency>
       <groupId>org.sdnhub.odl.tutorial</groupId>
