--- a/northbound/pom.xml
+++ b/northbound/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>tee.northbound</artifactId>
-  <version>0.5.0-SNAPSHOT</version>
+  <version>${tee.northbound.version}</version>
   <packaging>bundle</packaging>
   <dependencies>
     <dependency>
@@ -34,8 +34,8 @@
     </dependency>
     <dependency>
       <groupId>org.sdnhub.odl.tutorial</groupId>
-      <artifactId>adsal_L2_forwarding</artifactId>
-      <version>0.5.0-SNAPSHOT</version>
+      <artifactId>tee</artifactId>
+      <version>0.6.0-SNAPSHOT</version>
     </dependency>
         <!-- other modules -->
     <dependency>
@@ -75,8 +75,8 @@
         <configuration>
           <instructions>
              <Import-Package>
-              org.opendaylight.tutorial.tutorial_L2_forwarding.internal,
-              org.opendaylight.tutorial.tutorial_L2_forwarding.internal.monitoring,
+              org.opendaylight.controller.tee.internal,
+              org.opendaylight.controller.tee.internal.monitoring,
               org.opendaylight.controller.hosttracker.hostAware,
               org.apache.commons.logging,
               com.sun.jersey.spi.container.servlet,
