--- a/tee/pom.xml
+++ b/tee/pom.xml
@@ -8,9 +8,9 @@
     <relativePath>../commons/parent/</relativePath>
   </parent>
 
-  <artifactId>adsal_L2_forwarding</artifactId>
-  <version>0.5.0-SNAPSHOT</version>
-  <name>L2 forwarding tutorial with AD-SAL OpenFlow plugins</name>
+  <artifactId>tee</artifactId>
+  <version>${tee.version}</version>
+  <name>TEE Traffic Engineering Engine</name>
   <packaging>bundle</packaging>
 
   <build>
@@ -23,13 +23,13 @@
         <configuration>
           <instructions>
             <Export-Package>
-              org.opendaylight.tutorial.tutorial_L2_forwarding.internal,
-              org.opendaylight.tutorial.tutorial_L2_forwarding.internal.monitoring,
-              org.opendaylight.tutorial.tutorial_L2_forwarding.internal.monitoring.shortestpath,
+              org.opendaylight.controller.tee.internal,
+              org.opendaylight.controller.tee.internal.monitoring,
+              org.opendaylight.controller.tee.internal.monitoring.shortestpath,
               edu.uci.ics.jung.visualization*
             </Export-Package>
             <Bundle-Activator>
-              org.opendaylight.tutorial.tutorial_L2_forwarding.internal.Activator
+              org.opendaylight.controller.tee.internal.Activator
             </Bundle-Activator>
           </instructions>
           <manifestLocation>${project.basedir}/META-INF</manifestLocation>
