Added icons for switches and hosts

--- a/tee/pom.xml
+++ b/tee/pom.xml
@@ -14,6 +14,11 @@
   <packaging>bundle</packaging>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/resources</directory>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.felix</groupId>
