--- a/distribution/opendaylight-osgi-adsal/pom.xml
+++ b/distribution/opendaylight-osgi-adsal/pom.xml
@@ -27,7 +27,7 @@ http://maven.apache.org/maven-v4_0_0.xsd">
     </dependency>
 
     <!-- SDNHub Artifacts -->
-    <dependency>
+<!--    <dependency>
       <groupId>org.sdnhub.odl</groupId>
       <artifactId>ofbroker</artifactId>
         <version>${sdnhub.of_plugins.version}</version>
@@ -42,6 +42,7 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <artifactId>protocol_plugins.openflow10</artifactId>
         <version>${sdnhub.of_plugins.version}</version>
     </dependency>
+-->  
     <!-- ODL Web -->
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
