Setting queue based on ToS field.

--- a/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
+++ b/distribution/opendaylight-osgi-adsal/src/main/resources/configuration/config.ini
@@ -156,8 +156,8 @@ lisp.smr = false
 # Number of k-shortest path to find
 tee.k = 5
 # Fields in match in addition to DL_SRC and DL_DST.
-# Possible comma separated values: "TP_SRC", "TP_DST", "NW_PROTO"
-tee.matchFields = NW_PROTO, TP_DST
+# Possible comma separated values: "TP_SRC", "TP_DST", "NW_PROTO", "TOS"
+tee.matchFields = NW_PROTO, TP_DST, TOS
 # Idle timeout for old flow lefta fter logical flow transition. Safe flow removal.
 tee.movingTimeout = 5
 # Idle timeout for ordinary flow programmed between two hosts
